# UrbanDevQA

./: .env.example  .gitattributes  .gitignore  README.md  UrbanDevQA.ipynb  end_to_end_pipeline.ipynb  geospatial_urban.ipynb  pyproject.toml
data/: LOSA11CD.geojson  NPPF_December_2024.md  broadband_coverage-data_dictionary.json  broadband_coverage.csv  broadband_speed-data_dictionary.json  broadband_speed.csv  cowz-data_dictionary.json  cowz.csv  cowz_description-data_dictionary.json  cowz_description.csv  gbr_pd_2020_1km_UNadj.tif  geodomain.db  house_age-data_dictionary.json  house_age.csv  house_med_trans-data_dictionary.json  house_med_trans.csv  imd-data_dictionary.json  imd.csv  oa_mosa_lad_rgn-data_dictionary.json  oa_mosa_lad_rgn.csv  poi-data_dictionary.json  poi.csv  population-data_dictionary.json  population_2011.csv  population_2012.csv  population_2013.csv  population_2014.csv  population_2015.csv  population_2016.csv  population_2017.csv  population_2018.csv  population_2019.csv  population_2020.csv  population_2021.csv  population_2022.csv  rmi_base2023-data_dictionary.json  rmi_base2023.csv  spatial_signatures-data_dictionary.json  spatial_signatures.csv  urban_tasks.json
src/: config.py  database.py  prompts.py
src/servers/: geodomain.py  nppf.py  openstreetmap.py  sequentialthinking.py  weather_service.py  websearch.py
