[project]
name = "urbandevqa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.16",
    "geojson>=3.2.0",
    "geopandas>=1.0.1",
    "geopy>=2.4.1",
    "haversine>=2.9.0",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "langchain-teddynote>=0.3.45",
    "langchain>=0.3.21",
    "langchain-mcp-adapters>=0.0.3",
    "langchain-openai>=0.3.11",
    "langgraph>=0.3.21",
    "langsmith>=0.3.19",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "mcp[cli]>=1.6.0",
    "numpy>=2.2.4",
    "openai>=1.69.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pdfplumber>=0.11.6",
    "python-dotenv>=1.1.0",
    "rasterio>=1.4.3",
    "seaborn>=0.13.2",
    "shapely>=2.0.7",
    "xlrd>=2.0.1",
    "rapidfuzz>=3.13.0",
    "folium>=0.19.5",
    "langchain-community>=0.3.20",
    "faiss-cpu>=1.10.0",
]
